@@ -4,9 +4,8 @@ package de.plushnikov.intellij.plugin.jps;
 import com.intellij.compiler.server.BuildProcessParametersProvider;
 import com.intellij.openapi.application.ReadAction;
 import com.intellij.openapi.project.Project;
-import com.intellij.pom.java.LanguageLevel;
-import com.intellij.psi.util.PsiUtil;
 import de.plushnikov.intellij.plugin.Version;
+import de.plushnikov.intellij.plugin.settings.ProjectSettings;
 import de.plushnikov.intellij.plugin.util.LombokLibraryUtil;
 import org.jetbrains.annotations.NotNull;
 
@@ -31,23 +30,11 @@ public final class LombokBuildProcessParametersProvider extends BuildProcessPara
     List<String> result = new ArrayList<>();
 
     final String lombokVersion = LombokLibraryUtil.getLombokVersionCached(myProject);
-    if (Version.isLessThan(lombokVersion, Version.LAST_LOMBOK_VERSION_WITH_JPS_FIX)) {
+    if (ProjectSettings.isEnabled(myProject, ProjectSettings.IS_LOMBOK_JPS_FIX_ENABLED) &&
+        Version.isLessThan(lombokVersion, Version.LAST_LOMBOK_VERSION_WITH_JPS_FIX)) {
       result.add("-Djps.track.ap.dependencies=false");
     }
 
-    if (PsiUtil.getLanguageLevel(myProject).isAtLeast(LanguageLevel.JDK_16) &&
-        Version.isLessThan(lombokVersion, Version.LOMBOK_VERSION_WITH_JDK16_FIX)) {
-      result.add("--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED");
-      result.add("--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED");
-      result.add("--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED");
-      result.add("--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED");
-      result.add("--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED");
-      result.add("--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED");
-      result.add("--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED");
-      result.add("--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED");
-      result.add("--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED");
-      result.add("--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED");
-    }
     return result;
   }
 }
